--- a/board/templates/login.html
+++ b/board/templates/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+<!-- board/templates/login.html -->
+{% extends "base_auth.html" %}
 {% load crispy_forms_tags %}   
   
 {% block content %} 
@@ -18,5 +19,4 @@
     </div>
    </div>
 </div>
-
 {% endblock %}
